# contact-app-django

./: .env-sample  .envrc  .envrc-sample  .gitignore  .pre-commit-config.yaml  Makefile  README.org  TODO.org  manage.py  pyproject.toml  requirements.in  requirements.txt
contact_app_django/: asgi.py  middleware.py  settings.py  tasks.py  urls.py  wsgi.py
contact_app_django/core/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
contact_app_django/core/migrations/: 0001_initial.py  0002_alter_contact_email.py  0003_alter_contact_email.py  0004_contact_created_at_contact_updated_at.py  0005_alter_contact_created_at_alter_contact_updated_at.py
contact_app_django/core/templates/: contact_form.html
contact_app_django/utils/: __init__.py  form_renderers.py  models.py  tasks.py  views.py
contact_app_django/utils/htmx/: forms.py  views.py
core/: models.py  urls.py  views.py
static/css/: site.css
static/js/: htmx-1.9.12.min.js  index.js
templates/: archive_ui.html  base.html  contact_create.html  contact_create_form.html  contact_detail.html  contact_edit.html  contact_form.html  htmx_form.html  index.html  rows.html
tests/core/: test_views.py
