[project]
name = "contact-app-django"
requires-python = ">=3.10.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
extend-exclude = """
(
   migrations/
   | __pycache__/
   | ^/static

)
"""

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "contact_app_django.settings"
testpaths = [
    "tests",
]
